# humanoid_control

./: CMakeLists.txt  package.xml
include/: humanoid_control_interface.h  humanoid_control_param.h
include/lcm/: RealDesLcm.hpp  RealFbLcm.hpp  lcm02_IO.h
model/: model_rl.pt
src/: humanoid_control_interface.cpp  lcm02_IO.cpp  main.cpp
src/lcm/: RealDesLcm.lcm  RealFbLcm.lcm
